# samples

./: README.md
MOD/mod_msgs/: CMakeLists.txt  package.xml
MOD/mod_msgs/include/mod_msgs/: util.hpp
MOD/mod_msgs/msg/: PedTraj.msg  PedTrajVec.msg
MOD/pcl_clustering/: CMakeLists.txt  package.xml
MOD/pcl_clustering/include/: dynmeans.hpp  dynmeans_impl.hpp  utilpcl.hpp  utilpcl_impl.hpp
MOD/pcl_clustering/launch/: cloud_filter_node.launch  cluster_node.launch
MOD/pcl_clustering/param/cloud_filter_node/: default.yaml
MOD/pcl_clustering/param/cluster_node/: default.yaml
MOD/pcl_clustering/src/: cloud_filter_node.cpp  cluster_node.cpp
MOD/ped_manager/: CMakeLists.txt  package.xml
MOD/ped_manager/launch/: ped_manager_node.launch
MOD/ped_manager/param/ped_manager_node/: default.yaml
MOD/ped_manager/src/: ped_manager_node.cpp
RVO/acl_msgs/: CMakeLists.txt  package.xml
RVO/acl_msgs/msg/: QuadGoal.msg  QuadWaypoint.msg  QuadWaypointError.msg  VehicleList.msg
RVO/rvo_ros/: CMakeLists.txt  package.xml
RVO/rvo_ros/include/: Agent.h  CrowdSimulator.hpp  CrowdVisualizer.hpp  Obstacle.h  RVOSimulator.h  RvoParamLoader.hpp  Vector2.h  VoPolygon.hpp
RVO/rvo_ros/launch/: rvo_vel_controller.launch
RVO/rvo_ros/msg/: Agent.msg  AgentInfo.msg  AgentParam.msg  AgentState.msg  Crowd.msg  CrowdTraj.msg  Obstacles.msg  VoInfo.msg
RVO/rvo_ros/param/: rvo_vel_controller.yaml  vicon_full.yaml  vicon_main.yaml
RVO/rvo_ros/rviz/: default.rviz
RVO/rvo_ros/scripts/: obs_loader.py  rvo_vel_crowd_commander.py
RVO/rvo_ros/src/: Agent.cpp  KdTree.cpp  RVOSimulator.cpp  crowd_visualizer_node.cpp  rvo_vel_controller.cpp
RVO/rvo_ros/srv/: AddAgent.srv  AddAgentState.srv  RemoveAgentId.srv  SetObstacles.srv  UpdateAgentParam.srv  UpdateAgentState.srv
duckietown/duckietown_msgs/: CMakeLists.txt
duckietown/fsm/: CMakeLists.txt  package.xml
duckietown/fsm/launch/: car_cmd_switch_node.launch  fsm_node.launch
duckietown/fsm/param/car_cmd_switch_node/: default.yaml
duckietown/fsm/param/fsm_node/: default.yaml
duckietown/fsm/src/: car_cmd_switch_node.py  fsm_node.py
duckietown/ros_diagram/: Duckietown_ROS_Diagram.dot
